# RenderTesting

./: .gitignore  CMakeLists.txt  vcpkg.json
Rendering/: CMakeLists.txt  rendering.cpp  vulkan_app.cpp  vulkan_app.hpp  window.cpp  window.hpp
Rendering/config/: logger_config.cpp  logger_config.hpp
Rendering/system/: os.hpp
